...
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnSurface"
                tools:text="Memory cache" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rows"
            android:layout_width="match_parent"
...
